[package]
name = "mihu"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
rayon = "1.12.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
url = "2.5.8"
webbrowser = "1.2.0"
which = "8.0.2"
